# session-zoo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish-test.yml  publish.yml
docs/superpowers/plans/: 2026-03-11-session-zoon.md  2026-03-14-zoo-skills.md  2026-05-01-zoo-list-title.md  2026-06-11-cache-stats.md
docs/superpowers/specs/: 2026-03-11-session-zoon-design.md  2026-03-14-zoo-skills-design.md  2026-05-01-zoo-list-title-design.md  2026-06-11-cache-stats-design.md
scripts/: generate_demo_gif.py
src/session_zoo/: cli.py  config.py  db.py  installer.py  models.py  renderer.py  summarizer.py  sync.py
src/session_zoo/adapters/: __init__.py  claude_code.py
src/session_zoo/data/skills/zoo-browse/: SKILL.md
src/session_zoo/data/skills/zoo-restore/: SKILL.md
src/session_zoo/data/skills/zoo-summarize/: SKILL.md
src/session_zoo/data/skills/zoo-sync/: SKILL.md
src/session_zoo/data/skills/zoo-tag/: SKILL.md
src/session_zoom/: cli.py  renderer.py  summarizer.py
src/session_zoom/adapters/: __init__.py  claude_code.py
src/session_zoon/: cli.py  config.py  db.py  renderer.py  summarizer.py  sync.py
src/session_zoon/adapters/: __init__.py  claude_code.py
tests/: conftest.py  test_claude_code_adapter.py  test_cli.py  test_config.py  test_db.py  test_e2e.py  test_import_quiet.py  test_installer.py  test_integration.py  test_models.py  test_renderer.py  test_stats.py  test_summarizer.py  test_sync.py
