[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-zoon"
version = "0.1.0"
description = "AI development session recorder — save and sync sessions to GitHub"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "anthropic>=0.52.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
zoom = "session_zoon.cli:app"
